--- a/Services/Identity/Nezam.Service.Identity.Application/Nezam.Service.Identity.Application.csproj
+++ b/Services/Identity/Nezam.Service.Identity.Application/Nezam.Service.Identity.Application.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Bonyan.DDD.Application" Version="1.0.2" />
+      <PackageReference Include="Bonyan.DomainDrivenDesign.Application" Version="1.0.4" />
     </ItemGroup>
 
 </Project>
