--- a/Services/Identity/Nezam.Service.Identity.Domain/Nezam.Service.Identity.Domain.csproj
+++ b/Services/Identity/Nezam.Service.Identity.Domain/Nezam.Service.Identity.Domain.csproj
@@ -6,7 +6,7 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Bonyan.DDD.Domain" Version="1.0.2" />
+        <PackageReference Include="Bonyan.DomainDrivenDesign.Domain" Version="1.0.4" />
         <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="8.0.8"/>
     </ItemGroup>
 </Project>
